--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
 
-/.vs/SerialPortAsync/v16/.suo
+/.vs
+/SerialPortAsync/obj
+/SerialPortAsync/bin
