--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /SerialPortAsync/obj
 /SerialPortAsync/bin
 /SerialPortAsync/SerialPortAsync.csproj.user
+/SerialPortAsync/Properties/PublishProfiles
